welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:15: error: '{' expected but 'case' found.
	case Color.green => return true
        ^SlugTracking:16: error: illegal start of definition
	case _ => return false
        ^