welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    // Write your code here
}        
if (estFaceMur()){
	return false
}
 

	if (estFaceMur()){
		return false
	}
	avance()
	getCouleurSol() match
	case Color.green => return true
	case _ => return false
